--- a/draft_ABP.tex
+++ b/draft_ABP.tex
@@ -677,9 +677,7 @@ For example, for $\mathscr A=\{123,12,23,1,2,3\}$, we have that
 so $F_{13}$ is not a true facet of $\mathscr A$, there're only $5$ facets left in
 $\mathscr A$.
 
-(Zhenjie: what are the facets of general permutahedra?  I believe they are known.)
-
-
+(Zhenjie: Are facets of $\mathscr A$ associated with $J$ just the $F_J$ of $\mathscr P_n$ after setting all $S_I=0$ for $I\not\in \mathscr A$? How to prove it?)
 
 \subsection{Binary geometries and $u$ equations}
 
