--- a/draft_ABP.tex
+++ b/draft_ABP.tex
@@ -584,12 +584,11 @@ In this section we shall argue that  a large subset of generalised permutahedra 
 
 In the last subsection, we have seen that any $n$-dimensional generalized 
 permutahedron can be constructed by a Minkowski sum of some simplices labeled by
-subsets of $[0,n]$. For a simplex labeled by a subset $I$, it can be realized as the 
-Newton Polytope of the linear polynomial $x_I=\sum_{i\in I}x_i$. Therefore, we can
-write down a natrual stringy canonical form for the generalized permutahedron 
+subsets of $[0,n]$. For a simplex labeled by a subset $I$, 
+it is natrual to associate the linear polynomial $x_I=\sum_{i\in I}x_i$ whose Newton polytope is the corresponding simplex. Therefore, we can write down a natrual stringy canonical form for the generalized permutahedron with the building set 
 $\mathscr P$
 \[
-	\mathcal I_{\mathscr P}(\{S_I\})=\int_{\mathbb R^{n+1}_+}
+	\mathcal I_{\mathscr P}(\{S_I\})=\int_{\mathbb R^{n}_+}
 	\frac{\prod_{i=0}^n \mathrm{d}\log x_i}
 	{\operatorname{GL}(1)_+}\prod_{I\in\mathscr P}x_I^{\alpha' S_I},
 \]
